--- a/Educatech/GoogleService-Info.plist
+++ b/Educatech/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>CLIENT_ID</key>
+    <string>810055477582-1vcra08crgqbi3hvkf26rdotmts1bjjp.apps.googleusercontent.com</string>
+    <key>REVERSED_CLIENT_ID</key>
+    <string>com.googleusercontent.apps.810055477582-1vcra08crgqbi3hvkf26rdotmts1bjjp</string>
 	<key>API_KEY</key>
 	<string>AIzaSyByXX8pXcfqrkFBbdTKOSa5Tf0CuXj9zCU</string>
 	<key>GCM_SENDER_ID</key>
