--- a/Educatech/Info.plist
+++ b/Educatech/Info.plist
@@ -26,7 +26,7 @@
 	<key>FacebookClientToken</key>
 	<string>1738474e49d5d50dd98e5fb62661cdef</string>
 	<key>FacebookDisplayName</key>
-	<string>Educstech</string>
+	<string>Educatech</string>
 	<key>GIDClientID</key>
 	<string>810055477582-1vcra08crgqbi3hvkf26rdotmts1bjjp.apps.googleusercontent.com</string>
 	<key>LSApplicationQueriesSchemes</key>
